--- a/style.css
+++ b/style.css
@@ -1,8 +1,1 @@
-.accordion {
-    margin: auto;
-    width: 50%;
-    border: 3px solid green;
-    padding: 10px;
-    text-align: center;
-    border: 3px solid green;
-}
+/* Thanks Bootstrap :)
